--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "sass": "^1.64.0",
     "typescript-plugin-css-modules": "^5.0.1"
   }
