--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.0",
     "typescript": "^4.9.5",
