--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "antd": "^5.7.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "normalize.css": "^8.0.1",
